0.5.0/_sources/gallery/swap_dims.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/swap_dims.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_swap_dims.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_swap_dims.py:


Swap dims
=========

Display a 4-D image and points layer and swap the displayed dimensions

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-44



.. image-sg:: /gallery/images/sphx_glr_swap_dims_001.png
   :alt: swap dims
   :srcset: /gallery/images/sphx_glr_swap_dims_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import numpy as np
    from skimage import data

    import napari

    blobs = np.stack(
        [
            data.binary_blobs(
                length=128, blob_size_fraction=0.05, n_dim=3, volume_fraction=f
            )
            for f in np.linspace(0.05, 0.5, 10)
        ],
        axis=0,
    )
    viewer = napari.view_image(blobs.astype(float))

    # add the points
    points = np.array(
        [
            [0, 0, 0, 100],
            [0, 0, 50, 120],
            [1, 0, 100, 40],
            [2, 10, 110, 100],
            [9, 8, 80, 100],
        ]
    )
    viewer.add_points(
        points, size=10, face_color='blue', out_of_slice_display=True
    )

    viewer.dims.order = (0, 2, 1, 3)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_swap_dims.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: swap_dims.ipynb <swap_dims.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: swap_dims.py <swap_dims.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
