0.8.0/_sources/gallery/swap_dims.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/swap_dims.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_swap_dims.py:


Swap dims
=========

Display a 4-D image and points layer and swap the displayed dimensions

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-45



.. image-sg:: /gallery/images/sphx_glr_swap_dims_001.png
   :alt: swap dims
   :srcset: /gallery/images/sphx_glr_swap_dims_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    import numpy as np
    from skimage import data

    import napari

    blobs = np.stack(
        [
            data.binary_blobs(
                length=128, blob_size_fraction=0.05, n_dim=3, volume_fraction=f
            )
            for f in np.linspace(0.05, 0.5, 10)
        ],
        axis=0,
    )
    viewer = napari.Viewer()
    layer = viewer.add_image(blobs.astype(float))

    # add the points
    points = np.array(
        [
            [0, 0, 0, 100],
            [0, 0, 50, 120],
            [1, 0, 100, 40],
            [2, 10, 110, 100],
            [9, 8, 80, 100],
        ]
    )
    viewer.add_points(
        points, size=10, face_color='blue', out_of_slice_display=True
    )

    viewer.dims.order = (0, 2, 1, 3)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_swap_dims.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: swap_dims.ipynb <swap_dims.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: swap_dims.py <swap_dims.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: swap_dims.zip <swap_dims.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
